package com.ad.cookgood.recipes.presentation.state

interface CommonUiState {
   val id: Int
   val name: String
}